--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,69 @@ html {
 
 body {
   font-family: sans-serif;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1;
   color: #555;
 }
+
+.header-title {
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.2rem;
+}
+
+.header-title-text {
+  align-items: center;
+}
+
+.header-title-text img {
+  margin-right: 0.4rem;
+}
+
+.header-toolbar {
+  padding: 0.2rem 0.8rem;
+}
+
+.toolbar-list,
+.nav-bar-list,
+.nav-bar-icons {
+  list-style: none;
+}
+
+.toolbar-list-items:link,
+.toolbar-list-items:visited {
+  color: #555;
+  text-decoration: none;
+  margin-right: 1.2rem;
+}
+
+.toolbar-list-items span {
+  text-decoration: underline;
+}
+
+.header-nav-bar {
+  background-color: #e9ecef;
+  border-top: 1px solid #ced4da;
+  padding: 1.2rem 2.4rem;
+}
+
+.nav-bar-list {
+  margin-right: auto;
+}
+
+.nav-bar-search-box {
+  padding: 0.5rem;
+  border: 0.1rem solid #999;
+  border-radius: 0.4rem;
+}
+
+
+
+
+/* .main {
+}
+.aside {
+}
+.footer {
+} */
