--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,20 @@ body {
 
 .header-title-text {
   align-items: center;
+  color: #333;
+}
+
+.header-title-icons {
+  padding: 0.4rem 1.6rem;
+}
+
+.header-title-icons:hover {
+  background-color: #e9ecef;
+}
+
+.header-title-icon .header-title-icons:last-child:hover {
+  background-color: #e03131;
+  color: #fff;
 }
 
 .header-title-text img {
@@ -32,7 +46,8 @@ body {
 
 .header-toolbar {
   background-color: #f8f9fa;
-  padding: 0.2rem 0.8rem;
+  font-size: 1.4rem;
+  padding: 0.2rem 0 0.2rem 0;
 }
 
 .toolbar-list,
@@ -46,7 +61,7 @@ body {
 .toolbar-list-items:visited {
   color: #555;
   text-decoration: none;
-  padding: 0.2rem 0.8rem;
+ padding: 0 1.1rem;
 }
 
 .toolbar-list-items:hover,
@@ -55,43 +70,31 @@ body {
   color: #fff;
 }
 
-.toolbar-list-items span {
-  text-decoration: underline;
-}
-
 .header-nav-bar {
-  background-color: #e9ecef;
-  border-top: 1px solid #ced4da;
-  border-bottom: 1px solid #ced4da;
-  padding: 1.2rem 2.4rem;
+  background-color: #f0f2f4;
+  border-top: 1px solid #e7eaed;
+  border-bottom: 1px solid #e7eaed;
+  align-items: center;
 }
 
 .nav-bar-list {
-  /* margin-right: auto;
-  gap: 2.4rem; */
+  gap: 2.4rem;
 }
 
 .nav-bar-list-items:link,
 .nav-bar-list-items:visited {
   text-decoration: none;
+  color: #444;
 }
 
-
 .nav-bar-search-box {
-  margin-right: 1.6rem;
   padding: 0.5rem;
   border: 0.1rem solid #999;
   border-radius: 0.4rem;
 }
 
 .nav-bar-icon {
-  margin-left: 2.4rem;
   list-style: none;
-}
-
-.nav-bar-icon-link:hover,
-.nav-bar-icon-link:visited {
-
 }
 
 .nav-bar-icons {
